--- a/config.toml
+++ b/config.toml
@@ -41,14 +41,13 @@ weight = 4
     tabWidth = 4
 
 [params]
-
   colortheme = "dark" # dark, light, white, or classic
   rss = true # generate rss feed. default value is false
   googleAnalyticsAsync = true # use asynchronous tracking. Synchronous tracking by default
   showAllPostsArchive = false # default
 
   # Home page settings
-  description = "I'm a senior web engineer @ anghami, I love to create"
+  description = "I'm a senior web engineer @[anghami](https://anghami.com)"
   mainSection = "posts" # your main section
   showAllPostsOnHomePage = false # default
   postsOnHomePage = 5 # this option will be ignored if showAllPostsOnHomePage is set to true
