chore: enable comments

--- a/config.toml
+++ b/config.toml
@@ -70,12 +70,12 @@ weight = 4
   mainSectionTitle = "## Posts"
 
   [params.comments]
-    enabled = false # default
-    engine = "cactus_comments" # only disqus, utterances, and cactus_comments is supported
+    enabled = true # default
+    engine = "utterances" # only disqus, utterances, and cactus_comments is supported
     [params.comments.utterances]
-      repo = "<github_username>/<github_reponame>"
-      label = "hugo-site-name" # you can use however you want to label your name in your repo's issues
-      theme = "github-light"
+      repo = "almo7aya/almo7aya.github.io"
+      label = "almo7aya.dev" # you can use however you want to label your name in your repo's issues
+      theme = "dark-blue"
     [params.comments.cactuscomments]
       siteName = "your_cactus_comments_sitename" # see https://cactus.chat/ on how to register your site name
       #serverUrl = "" # Defaults to https://matrix.cactus.chat:8448 (Cactus Chat public server)
