chore: add author to the config file

--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ theme = "cactus"
 copyright = "Almo7aya" # cactus will use title if copyright is not set
 disqusShortname = "example" # Used when comments is enabled. Cactus will use site title if not set
 googleAnalytics = "G-KLG0T39J77"
+author = "Almo7aya"
 
 summaryLength = 2
 
