--- a/data/projects.json
+++ b/data/projects.json
@@ -3,7 +3,7 @@
     {
       "name": "openingh.nvim",
       "url": "https://github.com/Almo7aya/openingh.nvim ",
-      "desc": "![GitHub Repo stars](https://img.shields.io/github/stars/almo7aya/openingh.nvim?color=%239f7b3d&style=flat-square): neovim plug that gives you two simple commands `:OpenInGHRepo` and `:OpenInGHFile` to easily open the current file or repo page in GitHub."
+      "desc": "![GitHub Repo stars](https://img.shields.io/github/stars/almo7aya/openingh.nvim?color=%239f7b3d&style=flat-square): neovim plugin that gives you two simple commands `:OpenInGHRepo` and `:OpenInGHFile` to easily open the current file or repo page in GitHub."
     },
     {
       "name": "neogruvbox.nvim",
